@@ -1,10 +1,19 @@
 Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 
 version 2.5.8 (06/26/2009):
-	* Fixed phantom online Yahoo! buddies.  They should now properly disappear
-	  when signing out.
+	MySpace:
+	* Accounts with empty buddy lists are now properly marked as connected.
+	* Fix receiving messages from users of MySpace IM's web client.
+
+	Yahoo:
+	* Fixed phantom online buddies.  They should now properly disappear when
+	  signing out.
 	* Fixed the crashes some users were seeing with cn.scs.msg.yahoo.com in
 	  2.5.7.
+	* Fixed compiling on systems with glib 2.4.x or older.
+
+	XMPP:
+	* Fix an incompatibility betweeen Prosody and libpurple clients.
 
 version 2.5.7 (06/20/2009):
 	* Yahoo Protocol 16 support, including new HTTPS login method; this should
